xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__dynamic_function_call_args.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"$foo(1 + 1, 3)\")"
---
Ok(Path(PathExpr(
  steps: [
    PostfixExpr(
      primary: VarRef(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      )),
      postfixes: [
        ArgumentList([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Expr(Some(Expr([
                Binary(BinaryExpr(
                  operator: Add,
                  left: PathExpr(
                    steps: [
                      PrimaryExpr(Literal(Integer((Positive, [
                        1,
                      ])))),
                    ],
                  ),
                  right: PathExpr(
                    steps: [
                      PrimaryExpr(Literal(Integer((Positive, [
                        1,
                      ])))),
                    ],
                  ),
                )),
              ])))),
            ],
          )),
          Path(PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                3,
              ])))),
            ],
          )),
        ]),
      ],
    ),
  ],
)))
