xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__function_call_without_arguments.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"fn:foo()\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(FunctionCall(FunctionCall(
        name: Name(
          name: "foo",
          prefix: Some("fn"),
          namespace: Some("http://www.w3.org/2005/xpath-functions"),
        ),
        arguments: [],
      ))),
    ],
  )),
])))
