xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__grammar_note_parens.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"address (: this may be empty :)\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      AxisStep(AxisStep(
        axis: Child,
        node_test: NameTest(Name(Name(
          name: "address",
          prefix: None,
          namespace: None,
        ))),
        predicates: [],
      )),
    ],
  )),
])))
