xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__inline_function.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"function($x) { $x }\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "x",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
      ],
      return_type: None,
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(VarRef(Name(
              name: "x",
              prefix: None,
              namespace: None,
            ))),
          ],
        )),
      ])),
      wrapper: false,
    ))),
  ],
)))
