xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__inline_function2.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"function($x, $y) { $x + $y }\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "x",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
        Param(
          name: Name(
            name: "y",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
      ],
      return_type: None,
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(Expr(Some(Expr([
              Binary(BinaryExpr(
                operator: Add,
                left: PathExpr(
                  steps: [
                    PrimaryExpr(VarRef(Name(
                      name: "x",
                      prefix: None,
                      namespace: None,
                    ))),
                  ],
                ),
                right: PathExpr(
                  steps: [
                    PrimaryExpr(VarRef(Name(
                      name: "y",
                      prefix: None,
                      namespace: None,
                    ))),
                  ],
                ),
              )),
            ])))),
          ],
        )),
      ])),
      wrapper: false,
    ))),
  ],
)))
