xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__inline_function_with_param_types.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"function($x as xs:integer) { $x }\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "x",
            prefix: None,
            namespace: None,
          ),
          type_: Some(Item(Item(
            item_type: AtomicOrUnionType(Integer),
            occurrence: One,
          ))),
        ),
      ],
      return_type: None,
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(VarRef(Name(
              name: "x",
              prefix: None,
              namespace: None,
            ))),
          ],
        )),
      ])),
      wrapper: false,
    ))),
  ],
)))
