xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__intersect.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"child::foo intersect child::bar\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Some(Expr([
      Binary(BinaryExpr(
        operator: Intersect,
        left: PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(Name(
                name: "foo",
                prefix: None,
                namespace: None,
              ))),
              predicates: [],
            )),
          ],
        ),
        right: PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(Name(
                name: "bar",
                prefix: None,
                namespace: None,
              ))),
              predicates: [],
            )),
          ],
        ),
      )),
    ])))),
  ],
)))
